Add article types

--- a/assets/writing/250122.md
+++ b/assets/writing/250122.md
@@ -2,11 +2,11 @@ Vim had to get away. He simply couldn't stand it any longer. That thing inside h
 
 Vim got up, the pain finally getting the better of him. He mumbled something about "going for a piss" in response to the inquiring eyes turning towards him, turned his back to the fire, and stumbled into the forest.
 
-He knew it was stupid going alone in the darkness - the gods knew what fell creatures might dwell in these woods - but Vim didn't care. He had to move, had to do something. At the moment, that urge was stronger than his sense of danger.
+He knew it was stupid going alone in the darkness – the gods knew what fell creatures might dwell in these woods – but Vim didn't care. He had to move, had to do something. At the moment, that urge was stronger than his sense of danger.
 
 ---
 
-Vim didn't look up - *couldn't* look up as Thelma sat down beside him. He made sure she wasn't sitting too close, afraid that the black liquid inside him would somehow spill over and spread to her like a disease. He wouldn't do that to her, wouldn't have her experience this pain; he didn't wish that on his worst enemy.
+Vim didn't look up – *couldn't* look up – as Thelma sat down beside him. He made sure she wasn't sitting too close, afraid that the black liquid inside him would somehow spill over and spread to her like a disease. He wouldn't do that to her, wouldn't have her experience this pain; he didn't wish that on his worst enemy.
 
 Thelma didn't say anything, didn't force him to talk or try to cheer him up. She just sat there quietly. Vim loved her for that.
 
