Fix formatted text not displaying correctly

--- a/assets/writing/250122.md
+++ b/assets/writing/250122.md
@@ -1,4 +1,6 @@
-Vim had to get away. He simply couldn't stand it any longer. That thing inside him was growing, slowly filling every cell of his body, consuming him. It forced him to move, to scream, to do *something*. If he just continued to sit here, he would surely explode, and the darkness that he contained would flow from him like a black fluid. A part of him longed for that; to just be let the pain flow from him, but he knew it wasn't that simple. Even though Vim was practically brimming with pain to the point where it surely was oozing from his skin, it refused to leave him. Like [] it never let go. Some days were better than others, but it always made itself known just when he was starting to think he'd finally be rid of it. 
+Vim had to get away. He simply couldn't stand it any longer. That thing inside him was growing, slowly filling every cell of his body, consuming him. It forced him to move, to scream, to do *something*. If he just continued to sit here, he would surely explode, and the darkness that he contained would flow from him like a black fluid. 
+
+A part of him longed for that; to just be let the pain flow from him, but he knew it wasn't that simple. Even though Vim was practically brimming with pain to the point where it surely was oozing from his skin, it refused to leave him. Like a recurring cold it never truly let go. Some days were better than others, but it always made itself known just when he was starting to think he'd finally be rid of it. 
 
 Vim got up, the pain finally getting the better of him. He mumbled something about "going for a piss" in response to the inquiring eyes turning towards him, turned his back to the fire, and stumbled into the forest.
 
@@ -38,7 +40,7 @@ Thelma paused, and for the first time Vim raised his eyes and met hers. They wer
 
 "How can you believe?" Vim asked, his voice not quite able to carry.
 
-"How could I not?" She asked back. "Some days it is literally the only thing that gets me out of bed; knowing that He has placed me here for a reason, and that no matter what happens he will carry me through. Without that promise and the knowledge that I am loved, that I am wanted and cared for, I don't know where I'd be." Thelmas eyes drifted toward the ground, and for a moment she seemed lost in her memories. Vin shook his head.
+"How could I not?" She asked back. "Some days it is literally the only thing that gets me out of bed; knowing that He has placed me here for a reason, and that no matter what happens He will carry me through. Without that promise and the knowledge that I am loved, that I am wanted and cared for, I don't know where I'd be." Thelmas eyes drifted toward the ground, and for a moment she seemed lost in her memories. Vin shook his head.
 
 "I cannot understand how you can believe that. If this being you call God exists at all he must either be a psychopath or have *really* bad humor. How else can he allow people to hurt like this? Or maybe this is what he means by love: pain coated with a thin layer of happiness. In that case, I'd rather not be loved at all."
 
