Update the latest moment

--- a/assets/writing/250122.md
+++ b/assets/writing/250122.md
@@ -28,8 +28,10 @@ Thelma paused, and for the first time Vim raised his eyes and met hers. They wer
 "I cannot understand how you can believe that. If this being you call God exists at all he must either be a psychopath or have *really* bad humor. How else can he allow people to hurt like this? Or maybe this is what he means by love: pain coated with a thin layer of happiness. In that case, I'd rather not be loved at all."
 Thelma looked at him for a moment, then shook her head. 
 "I don't think you actually believe that. And you can't blame the gardener for the crows uprooting his garden."
-"I know," Vim said, resigned. "I just want someone to blame, or rather still someone who can take this pain away from me. I don't want to carry it any more, I just want to be free."
-Thelma didn't respond to that, but instead took his hand in hers.
-"What did she do to you?" she asked softly, her eyes full of care.
-"She took my heart," Vim whispered, and he could feel the sorrow seeping out of his eyes.
-"And she smashed it to pieces."
+Vim stared at the ground, resigned. "I know," he said. "Perhaps I just want a reason for all this pain, someone to call responsible. Or rather still, I want a solution; someone to take the pain away from me."
+Thelma didn't respond to that. She didn't say anything at all, in fact, but just sat there, staring into the dark forest that surrounded them. Vim looked at her, then looked back at the ground. Thelma remained silent.
+"Aren't you going to say something?" Vim asked after a while. "Aren't you going to tell me that everything will be alright, that time will mend my heart; or say something clever to make me feel better about myself? Give me a slap on the back and tell me I'll get over it?"
+Thelma shook her head. 
+"No" she said. "No, I won't say that. I won't tell you everything will be alright, because it won't be. Not for a very long time, not in this life. And I can't say something to make the pain disappear or do something to carry it for you, no matter how much I wish I could. All I can do is to sit here next to you. So that's what I will do, Vim. For as long as I have breath in my lungs, I will sit by your side; if only you let me; and as long as I have eyes to see, I will stare into the darkness with you."
+She turned her eyes towards him and met his gaze. Vim could feel tears filling his eyes. He couldn't remember crying since...since before **her**.
+"Thank you," he said, his voice shattered. Tears were slowly rolling down his face, and they brought with them a quiet peace. It was as if some dam within him had cracked, and was letting water through for the first time in months. Despite claiming that there was nothing she could do, Thelma simply being there beside him was a comfort. She hadn't left when he'd told her about his worry. She hadn't laughed or mocked him. Vim wasn't whole. His heart was still shattered and he was still a mess on the inside; but at least this time he didn't need to go back into the darkness alone.
